--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   </header>
   <main>
    <ul class="produtos">
-         <li>
+    <li>
+      <h2></h2>
+      <p class="nome">Matheus 2DS B</p>
+    </li>
+          <li>
             <h2></h2>
             <img src="email.png">
             <p class="contato">matheusc.freitass@gmail.com</p>
